# artillery_range_table

./: README.md  auto-py-to-exe.json  pyproject.toml  run_auto_py_to_exe.bat
src/: run_gui.py
src/exterior_ballistics/: dekker.py  gui.py  rangetable.py  trajectory.py
